@@ -13,6 +13,8 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 ***	Eliminate common prefix from postscript dumps.  [Dominik Strasser]
 
+***	Show count of posedges and negedges in value examine.
+
 
 * Changes in Dinotrace 9.1d  5/24/2001
 
